feat: added auth

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,10 @@
   "editor.codeActionsOnSave": {
     "source.fixAll": true
   },
+  "[prisma]": {
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "Prisma.prisma"
+  },
   "cssVariables.lookupFiles": [
     "**/*.css",
     "**/*.scss",
