feat: starting integration

--- a/apps/ui/.eslintrc.json
+++ b/apps/ui/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": ["@ivopr/eslint-config/react"]
+  "extends": ["@ivopr/eslint-config/react"],
+  "rules": {
+    "no-undef": "off"
+  }
 }
