--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -19,8 +19,11 @@
     "@tabler/icons-react": "^2.40.0",
     "@tanstack/react-query": "^5.8.1",
     "@tanstack/react-query-devtools": "^5.8.1",
+    "axios": "^1.6.2",
     "dayjs": "^1.11.10",
     "next": "14.0.2",
+    "next-auth": "^4.24.5",
+    "next-international": "^1.1.4",
     "react": "^18",
     "react-dom": "^18"
   },
