--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,8 +25,8 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.15",
-    "@prisma/client": "^5.5.2",
     "bull": "^4.11.4",
+    "database": "workspace:*",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -45,7 +45,6 @@
     "@types/passport-jwt": "^3.0.13",
     "@types/passport-local": "^1.0.38",
     "@types/uuid": "^9.0.7",
-    "prisma": "^5.5.2",
     "source-map-support": "^0.5.21",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
