--- a/apps/ui/Dockerfile.dev
+++ b/apps/ui/Dockerfile.dev
@@ -1,23 +1,23 @@
 FROM node:20-alpine AS base
+LABEL authors="ivopr"
+
+# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
+RUN apk add --no-cache libc6-compat
+RUN corepack enable && corepack prepare yarn@3.6.4 --activate
 
 # Install dependencies only when needed
 FROM base AS deps
-# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
-RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
 # Install dependencies based on the preferred package manager
-COPY apps/ui/package.json yarn.lock ./
+COPY package.json .yarnrc.yml yarn.lock ./
+COPY apps/ui/package.json apps/ui/.yarnrc.yml ./apps/ui/
+COPY packages ./packages
 RUN yarn install
-
+RUN yarn workspace database generate
+RUN yarn workspace database build
 
 # Rebuild the source code only when needed
 FROM base AS builder
 WORKDIR /app
-
 COPY --from=deps /app/node_modules ./node_modules
-
-# Next.js collects completely anonymous telemetry data about general usage.
-# Learn more here: https://nextjs.org/telemetry
-# Uncomment the following line in case you want to disable telemetry during the build.
-ENV NEXT_TELEMETRY_DISABLED 1
