--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -20,8 +20,9 @@
     "@tanstack/react-query": "^5.8.4",
     "@tanstack/react-query-devtools": "^5.8.4",
     "axios": "^1.6.2",
+    "database": "workspace:*",
     "dayjs": "^1.11.10",
-    "next": "14.0.2",
+    "next": "14.0.3",
     "next-auth": "^4.24.5",
     "next-international": "^1.1.4",
     "react": "^18",
