--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "packageManager": "yarn@3.6.4",
   "private": true,
   "workspaces": [
-    "apps/*"
+    "apps/*",
+    "packages/*"
   ],
   "devDependencies": {
     "@ivopr/eslint-config": "^1.1.0",
