--- a/apps/ui/Dockerfile.dev
+++ b/apps/ui/Dockerfile.dev
@@ -16,6 +16,7 @@ COPY packages ./packages
 RUN yarn install
 RUN yarn workspace database generate
 RUN yarn workspace database build
+RUN yarn install
 
 # Rebuild the source code only when needed
 FROM base AS builder
