--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lucia-auth/adapter-prisma": "^3.0.2",
     "@mantine/core": "^7.2.1",
     "@mantine/dates": "^7.2.1",
     "@mantine/dropzone": "^7.2.1",
@@ -22,8 +23,8 @@
     "axios": "^1.6.2",
     "database": "workspace:*",
     "dayjs": "^1.11.10",
+    "lucia": "^2.7.4",
     "next": "14.0.3",
-    "next-auth": "^4.24.5",
     "next-international": "^1.1.4",
     "react": "^18",
     "react-dom": "^18"
