--- a/packages/database/Dockerfile.dev
+++ b/packages/database/Dockerfile.dev
@@ -12,37 +12,12 @@ WORKDIR /app
 
 # Install dependencies based on the preferred package manager
 COPY package.json .yarnrc.yml yarn.lock ./
-COPY apps/api/package.json apps/api/.yarnrc.yml ./apps/api/
-COPY packages ./packages
+COPY packages/database/package.json ./packages/database/package.json
 RUN yarn install
 RUN yarn workspace database generate
-RUN yarn workspace database build
-RUN yarn install
 
 # Rebuild the source code only when needed
-FROM base AS builder
-WORKDIR /app
-
-COPY --from=deps /app/node_modules ./node_modules
-COPY package.json .yarnrc.yml yarn.lock .env ./
-COPY apps/api ./apps/api
-COPY packages ./packages
-
-RUN yarn workspace api build
-
 FROM base AS runner
-COPY apps/api/bin/Mold2 /bin/Mold2
-RUN chmod +x /bin/Mold2
-
 WORKDIR /app
 
 COPY --from=deps /app/node_modules ./node_modules
-COPY package.json .yarnrc.yml yarn.lock .env ./
-COPY apps/api/dist ./apps/api/dist
-COPY apps/api/.env ./apps/api.env
-COPY apps/api/package.json ./apps/api
-COPY packages ./packages
-
-EXPOSE 3000
-
-CMD ["yarn", "workspace", "api", "start:prod"]
