chore: prepare for prod deploy

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 DATABASE_URL="postgresql://postgres:postgres@database:5432/qsar?schema=public"
+
+TRAEFIK_URL="proxy.qsar.localhost"
+TRAEFIK_BASIC_AUTH="admin:$$apr1$$gaS8tVEe$$MjqM8IlBvz2PRFEWcwha1/"
+UI_URL="qsar.localhost"
