feat: analytics with plausible

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,17 @@
-DATABASE_URL="postgresql://postgres:postgres@database:5432/qsar?schema=public"
-
+# INFRA
 TRAEFIK_URL="proxy.qsar.localhost"
 TRAEFIK_BASIC_AUTH="admin:$$apr1$$gaS8tVEe$$MjqM8IlBvz2PRFEWcwha1/"
 UI_URL="qsar.localhost"
+PLAUSIBLE_URL="analytics.qsar.localhost"
+
+# API
+DATABASE_URL="postgresql://postgres:postgres@database:5432/qsar?schema=public"
+
+# ANALYTICS
+BASE_URL="https://${PLAUSIBLE_URL}"
+SECRET_KEY_BASE=""
+ENABLE_EMAIL_VERIFICATION=false
+
+# UI
+NEXT_PUBLIC_ANALYTICS_DOMAIN="${BASE_URL}"
+NEXT_PUBLIC_ANALYTICS_HOST="${UI_URL}"
