--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -24,10 +24,12 @@
     "database": "workspace:*",
     "dayjs": "^1.11.10",
     "lucia": "^2.7.4",
-    "next": "14.0.3",
+    "next": "14.0.0",
     "next-international": "^1.1.4",
+    "next-plausible": "^3.11.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@prisma/nextjs-monorepo-workaround-plugin": "^5.5.2",
