--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -45,6 +45,7 @@ services:
     volumes:
       - redis:/data
 
+  # INFRA
   traefik:
     image: traefik
     command:
@@ -84,7 +85,53 @@ services:
       - 80:80
       - 443:443
 
+  # ANALYTICS
+  plausible_db:
+    # supported versions are 12, 13, and 14
+    image: postgres:14-alpine
+    restart: always
+    volumes:
+      - plausible_database:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_PASSWORD=postgres
+
+  plausible_events_db:
+    image: clickhouse/clickhouse-server:23.3.7.5-alpine
+    restart: always
+    volumes:
+      - plausible_event_database:/var/lib/clickhouse
+      - ./clickhouse/clickhouse-config.xml:/etc/clickhouse-server/config.d/logging.xml:ro
+      - ./clickhouse/clickhouse-user-config.xml:/etc/clickhouse-server/users.d/logging.xml:ro
+    ulimits:
+      nofile:
+        soft: 262144
+        hard: 262144
+
+  plausible:
+    image: plausible/analytics:v2.0
+    restart: always
+    command: sh -c "sleep 10 && /entrypoint.sh db createdb && /entrypoint.sh db migrate && /entrypoint.sh run"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.services.plausible.loadbalancer.server.port=8000"
+      - "traefik.http.routers.plausible.rule=Host(`${PLAUSIBLE_URL}`)"
+      - "traefik.http.routers.plausible.service=plausible"
+      - "traefik.http.routers.plausible.tls=true"
+      - "traefik.http.routers.plausible.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.plausible.tls.domains[0].main=${UI_URL}"
+      - "traefik.http.routers.plausible.tls.domains[0].sans=*.${PLAUSIBLE_URL}"
+      - "traefik.http.routers.plausible.entryPoints=websecure"
+    depends_on:
+      - plausible_db
+      - plausible_events_db
+    env_file:
+      - .env
+
 volumes:
+  plausible_event_database:
+    driver: nfsvol
+  plausible_database:
+    driver: nfsvol
   traefik_acme:
     driver: nfsvol
   traefik_logs:
