--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -36,6 +36,8 @@ services:
     environment:
       POSTGRES_PASSWORD: "postgres"
       POSTGRES_DB: "qsar"
+    ports:
+     - "5432:5432"
     volumes:
       - database:/var/lib/postgresql/data
 
