--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   ],
   "devDependencies": {
     "@ivopr/eslint-config": "^1.1.0",
-    "eslint": "^8.53.0"
+    "@release-it/bumper": "^6.0.1",
+    "@release-it/conventional-changelog": "^8.0.1",
+    "eslint": "^8.53.0",
+    "release-it": "^17.0.0"
   }
 }
