--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,8 @@ jobs:
         with:
           node-version: 20
           cache: "yarn"
+
+      - name: Enable Corepack
         run: |
           corepack enable
 
