--- a/.release-it.json
+++ b/.release-it.json
@@ -8,7 +8,7 @@
   },
   "plugins": {
     "@release-it/bumper": {
-      "out": ["package.json", "apps/api/package.json", "apps/ui/package.json", "packages/database/package.json"]
+      "out": ["apps/api/package.json", "apps/ui/package.json", "packages/database/package.json"]
     },
     "@release-it/conventional-changelog": {
       "infile": "CHANGELOG.md",
