feat: added csv download, about page

--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -23,18 +23,22 @@
     "axios": "^1.6.2",
     "database": "workspace:*",
     "dayjs": "^1.11.10",
+    "equation-resolver": "^1.0.0",
     "lucia": "^2.7.4",
     "next": "14.0.0",
     "next-international": "^1.1.4",
     "next-plausible": "^3.11.3",
     "react": "^18",
+    "react-csv": "^2.2.2",
     "react-dom": "^18",
+    "react-equation": "^1.0.0",
     "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@prisma/nextjs-monorepo-workaround-plugin": "^5.5.2",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18",
     "postcss": "^8.4.31",
     "postcss-preset-mantine": "^1.11.0",
