--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
           cache: yarn
 
       - name: Install Dependencies
-        run: yarn install
+        run: yarn --immutable
 
       - name: Set Git user to Actions Bot
         run: |
